[gd_scene load_steps=6 format=3 uid="uid://b4da3to7mvee5"]

[ext_resource type="Script" path="res://UI/tree_table/popup/popup.gd" id="1_qesg7"]
[ext_resource type="StyleBox" uid="uid://c5j3vvsmp7hrv" path="res://UI/tree_table/popup/styles/style_button.tres" id="3_ad0qi"]
[ext_resource type="StyleBox" uid="uid://ba3er5q0gfoec" path="res://UI/tree_table/popup/styles/style_save_button.tres" id="4_mv5ab"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xw5l"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ifwp"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Popup" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_qesg7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.411765)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 200

[node name="Panel" type="Panel" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2xw5l")

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8ifwp")

[node name="ItemsContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="CancelBtn" type="Button" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = ExtResource("3_ad0qi")
theme_override_styles/hover_pressed = ExtResource("3_ad0qi")
theme_override_styles/hover = ExtResource("3_ad0qi")
theme_override_styles/pressed = ExtResource("3_ad0qi")
theme_override_styles/normal = ExtResource("3_ad0qi")
text = "Cancel"

[node name="DeleteBtn" type="Button" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/focus = ExtResource("3_ad0qi")
theme_override_styles/hover_pressed = ExtResource("3_ad0qi")
theme_override_styles/hover = ExtResource("3_ad0qi")
theme_override_styles/pressed = ExtResource("3_ad0qi")
theme_override_styles/normal = ExtResource("3_ad0qi")
text = "Delete"

[node name="SaveBtn" type="Button" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = ExtResource("4_mv5ab")
theme_override_styles/hover_pressed = ExtResource("4_mv5ab")
theme_override_styles/hover = ExtResource("4_mv5ab")
theme_override_styles/pressed = ExtResource("4_mv5ab")
theme_override_styles/normal = ExtResource("4_mv5ab")
text = "Save"

[connection signal="pressed" from="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/DeleteBtn" to="." method="_on_delete_btn_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
